<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="nul">0</string>
    <string name="threepoints">+3 points</string>
    <string name="twopoints">+2 points</string>
    <string name="freethrow">free throw</string>
    <string name="team_b">Team B</string>
    <string name="nulx">0</string>
    <string name="threepointsx">+3 ponts</string>
    <string name="twopointsx">+2 points</string>
    <string name="freethrowx">free throw</string>
    <string name="reset">Reset</string>
</resources>