<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#272728"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/linear1"
            android:background="@drawable/background"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="50sp"
                android:textColor="#ceeefe"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/team1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/nul"
                android:gravity="center"
                android:textSize="80sp"
                android:textStyle="bold"
                android:id="@+id/txt1"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/threepoints"
                android:onClick="btone"
                android:textColor="#ceeefe"
                android:background="@drawable/bt1back"
                android:layout_marginBottom="5dp"
                android:id="@+id/bt1"/>

            <Button
                android:id="@+id/bt2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="#ceeefe"
                android:onClick="bttwo"
                android:background="@drawable/bt1back"
                android:text="@string/twopoints" />

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/freethrow"
                android:textColor="#ceeefe"
                android:onClick="btthree"
                android:background="@drawable/bt1back"
                android:id="@+id/bt3"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/linear2"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/background1"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textAllCaps="true"
                android:textColor="#fbcccc"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/nulx"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="80sp"
                android:id="@+id/txt11"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/threepointsx"
                android:textColor="#fbcccc"
                android:onClick="btonex"
                android:background="@drawable/bt1back"
                android:layout_marginBottom="5dp"
                android:id="@+id/bt11"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/twopointsx"
                android:textColor="#fbcccc"
                android:onClick="bttwox"
                android:background="@drawable/bt1back"
                android:layout_marginBottom="5dp"
                android:id="@+id/bt22"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/freethrowx"
                android:textColor="#fbcccc"
                android:onClick="btthreex"
                android:background="@drawable/bt1back"
                android:id="@+id/bt33"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/org"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/bt1back"
        android:onClick="btreset"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>